src/test/ui/async-await/no-const-async.stderr
error: expected identifier, found keyword `async`
  --> $DIR/no-const-async.rs:4:11
   |
LL | pub const async fn x() {}
   |           ^^^^^ expected identifier, found keyword

error: expected `:`, found keyword `fn`
  --> $DIR/no-const-async.rs:4:17
   |
LL | pub const async fn x() {}
   |                 ^^ expected `:`

error: aborting due to 2 previous errors

